--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@ body {
 #aertel {
     max-width: 80%;
     margin: auto;
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
 }
 
 #green {
