--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
     background-color: #000000;
     color: #ffffff;
@@ -7,6 +9,7 @@ body {
     max-width: 80%;
     margin: auto;
     text-align: center;
+    font-family: 'Press Start 2P', cursive;
 }
 
 ul {
