--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-body {
+#aertel {
     background-color: #000000;
     color: #ffffff;
-}
-
-#aertel {
-    max-width: 80%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 5px;
+    padding-right: 5px;
+    letter-spacing: 2px;
+    max-width: 50%;
     margin: auto;
-    text-align: center;
     font-family: 'Press Start 2P', cursive;
 }
 
