--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,16 @@
 #aertel {
     background-color: #000000;
     color: #ffffff;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 5px;
     letter-spacing: 2px;
     max-width: 50%;
     margin: auto;
     font-family: 'Press Start 2P', cursive;
+}
+
+.blue-bg {
+    background-color: #0300fc;
+    padding: 5px;
 }
 
 ul {
