--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ h1 {
     padding: 5px;
     letter-spacing: 2px;
     width: 50%;
-    margin: auto;
+    margin: 20px auto 10px;
     font-family: 'Press Start 2P', cursive;
 }
 
